k8s/console/deployment.yaml
# Deployment for the autoscaling demo console.
# Provides a web UI to trigger workflows with
# pre-defined load scenarios.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: console
spec:
  replicas: 1
  selector:
    matchLabels: &labels
      app.kubernetes.io/name: temporal-autoscaling-demo
      app.kubernetes.io/component: console
  template:
    metadata:
      labels: *labels
    spec:
      terminationGracePeriodSeconds: 45
      containers:
        - name: console
          image: ghcr.io/alexandreroman/temporal-autoscaling-demo-console
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 8081
              name: management
          lifecycle:
            preStop:
              sleep:
                seconds: 10
          resources:
            requests:
              memory: 256Mi
            limits:
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: management
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: management
            initialDelaySeconds: 15
            periodSeconds: 10
