k8s/console/service.yaml
# ClusterIP Service exposing the console
# deployment within the cluster.
apiVersion: v1
kind: Service
metadata:
  name: console
spec:
  selector:
    app.kubernetes.io/name: temporal-autoscaling-demo
    app.kubernetes.io/component: console
  ports:
    - port: 80
      targetPort: http
      name: http
